k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diploma-test-app-svc
  labels:
    app: diploma-test-app
spec:
  type: NodePort
  selector:
    app: diploma-test-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32042
